--- a/rate-limiter/pom.xml
+++ b/rate-limiter/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.petarj123</groupId>
 	<artifactId>rate-limiter</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>rate-limiter</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -57,6 +57,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<classifier>exec</classifier>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
